--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "express": "^4.17.1",
     "parse5": "^6.0.1",
     "webpack": "^5.58.1"
+    "express": "latest",
+    "connect-history-api-fallback": "latest"
   }
 }
