--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "RandomWebProxy",
   "version": "1.0.0",
   "description": "Efficient and secure web proxy service that enables anonymous browsing and unrestricted access to the internet!",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "author": "Nebelung",
   "dependencies": {
