--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "css-tree": "^1.1.3",
     "express": "^4.17.1",
     "parse5": "^6.0.1",
-    "webpack": "^5.58.1"
+    "webpack": "^5.58.1",
     "express": "latest",
     "connect-history-api-fallback": "latest"
   }
