--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "Nebelung",
   "dependencies": {
     "acorn-hammerhead": "^0.5.0",
+    "connect-history-api-fallback": "^2.0.0",
     "corrosion": "^1.0.0",
     "css-tree": "^1.1.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "parse5": "^6.0.1",
     "webpack": "^5.58.1"
   }
