--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "RandomWebProxy",
+  "name": "Rhodium",
   "version": "1.0.0",
-  "description": "Efficient and secure web proxy service that enables anonymous browsing and unrestricted access to the internet!",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
+  "description": "",
+  "main": "lib/main/bundle.js",
+  "directories": {
+    "lib": "lib"
   },
-  "author": "Nebelung",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "acorn-hammerhead": "^0.5.0",
-    "corrosion": "^1.0.0",
-    "css-tree": "^1.1.3",
-    "express": "^4.17.1",
-    "parse5": "^6.0.1",
-    "webpack": "^5.58.1"
+    "css": "^3.0.0",
+    "css-tree": "^2.0.4",
+    "jsdom": "^19.0.0",
+    "webpack": "^5.65.0",
+    "ws": "^8.4.0"
   }
 }
