--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Rusty",
+    "name": "RandomWebProxy",
     "description": "A simple frontend design for Corrosion you can deploy",
     "repository": "https://github.com/Nebelung-Dev/Rusty",
     "logo": "https://avatars.githubusercontent.com/u/87547936?s=200&v=4"
