--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rusty",
+  "name": "RandomWebProxy",
   "version": "1.0.0",
   "description": "A simple frontend design for Corrosion you can deploy",
   "main": "index.js",
